--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <nav>
                 <img width="150px" src="assets/images/logo.svg" alt="netflix-logo" id="logo">
                 <div class="buttons">
-                    <button><i class="fa-solid fa-language"></i> Hindi <i class="fa-solid fa-sort-down"></i></button>
+                    <button><i class="fa-solid fa-language"></i> English <i class="fa-solid fa-sort-down"></i></button>
                     <button>Sign In</button>
                 </div>
             </nav>
