updated index.html and style.css

--- a/index.html
+++ b/index.html
@@ -145,10 +145,10 @@
                     </ul>
                 </div>
             </div>
-            <div id="last-container">
+            <div id="second-last-container">
                 <button><i class="fa-solid fa-language"></i> English <i class="fa-solid fa-sort-down"></i></button>
-                <div id="netflix-india">Netflix India</div>
             </div>
+            <div id="last-container"><div id="netflix-india">Netflix India</div></div>
         </footer>
     </main>
 
