updated index.html and style.css

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
         <footer>
             <div id="footer-container">
-                <div id="number">Questions? Call 000-800-919-1694</div>
+                <div id="number">Questions? Call <a href="#">000-800-919-1694</a></div>
                 <div id="footer-links">
                     <ul>
                         <li><a href="#">FAQ</a></li>
@@ -145,10 +145,11 @@
                     </ul>
                 </div>
             </div>
-            <div id="second-last-container">
+            
+            <div id="last-container">
                 <button><i class="fa-solid fa-language"></i> English <i class="fa-solid fa-sort-down"></i></button>
+                <div id="netflix-india">Netflix India</div>
             </div>
-            <div id="last-container"><div id="netflix-india">Netflix India</div></div>
         </footer>
     </main>
 
