--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <div class="text">Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and
                         more.</div>
                 </div>
-                <div>
+                <div class="img">
                     <img src="assets/images/tv.png" alt="">
                     <video src="assets/videos/enjoy-on-your-tv-video.m4v" autoplay loop muted></video>
                 </div>
@@ -49,10 +49,10 @@
             <div class="separator"></div>
 
             <div class="section section-image-left" id="second-section">
-                <div>
+                <div class="img" id="img-with-batch">
                     <img src="assets/images/offline.jpg" alt="">
                     <div id="batch">
-                        <img src="assets/images/offline-stranger-things.png" alt="">
+                        <img id="batch-img" src="assets/images/offline-stranger-things.png" alt="">
                         <div>
                             <h4>Stranger Things</h4>
                             <div>Downloading...</div>
@@ -74,7 +74,7 @@
                     <h1>Watch everywhere</h1>
                     <div class="text">Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV.</div>
                 </div>
-                <div>
+                <div class="img">
                     <img src="assets/images/watch-everywhere-tv.png" alt="">
                     <video src="assets/videos/watch-everywhere-video.m4v" autoplay loop muted></video>
                 </div>
@@ -84,7 +84,9 @@
             <div class="separator"></div>
 
             <div class="section section-image-left" id="forth-section">
-                <div><img src="assets/images/kids.png" alt=""></div>
+                <div class="img">
+                    <img src="assets/images/kids.png" alt="">
+                </div>
                 <div id="forth-section-text">
                     <h1>Create profiles for kids</h1>
                     <div class="text">Send children on adventures with their favourite characters in a space made just
